PD-86968t94c : menu dropdown z-index fixed in contact, checkbox style fixed, color variables added to menu.css

--- a/web/src/components/Menu/Menu.module.css
+++ b/web/src/components/Menu/Menu.module.css
@@ -18,12 +18,12 @@
     font-size: 16px;
     border-radius: 5px;
     position: absolute;
-    z-index: 1;
+    z-index: 11;
 }
 
 .menu-dropdown {
     padding-top: 30px;
-    display: none; /* Oculto por defecto */
+    display: none; 
     position: relative;
     width: 100%;
     height: 100vh;
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    
+    z-index: 10;
 }
 
 .menu-dropdown li {
